--- a/starter-webapp/src/main/resources/ValidationMessages_es.properties
+++ b/starter-webapp/src/main/resources/ValidationMessages_es.properties
@@ -1,4 +1,5 @@
 firstName.size=Nombre debe ser entre {min} y {max} caracteres largo.
 lastName.size=El apellido debe ser entre {min} y {max} caracteres largo.
 username.size=Nombre de usuario debe ser entre {min} y {max} caracteres largo.
-password.size=Contraseña debe estar entre {min} y {max} caracteres largo.
+password.size=Contraseï¿½a debe estar entre {min} y {max} caracteres largo.
+email.message=DirecciÃ³n de E-Mail incorrecta.
